force-app/main/default/objects/EmploymentHistory__c/EmploymentHistory__c.object-meta.xml
<CustomObject>
    <label>Employment History</label>
    <nameField>
        <displayFormat>Employment-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employment History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>