force-app/main/default/objects/EmploymentHistory__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <inlineHelpText>This field is not on the Page Layout</inlineHelpText>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>