force-app/main/default/objects/EmploymentHistory__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of the Contact. Lookup to be done in case he already exists</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Employment Records</relationshipLabel>
    <relationshipName>Employments</relationshipName>
    <type>Lookup</type>
</CustomField>