force-app/main/default/objects/EmploymentHistory__c/fields/Current_Position_Held__c.field-meta.xml
<CustomField>
    <fullName>Current_Position_Held__c</fullName>
    <label>Current Position Held</label>
    <length>50</length>
    <type>Text</type>
</CustomField>