force-app/main/default/objects/EmploymentHistory__c/fields/CurrentJobEH__c.field-meta.xml
<CustomField>
    <fullName>CurrentJobEH__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this box if the Contact is still working in this role.</inlineHelpText>
    <label>Current Job</label>
    <type>Checkbox</type>
</CustomField>