force-app/main/default/objects/EmploymentHistory__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Work Area where the employee was previously working</description>
    <inlineHelpText>Enter the name of the department where the Contact works or was previously working</inlineHelpText>
    <label>Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>