force-app/main/default/objects/EmploymentHistory__c/fields/Employment_Name1__c.field-meta.xml
<CustomField>
    <fullName>Employment_Name1__c</fullName>
    <label>Employment Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>