force-app/main/default/objects/EmploymentHistory__c/fields/EmploymentHistoryName__c.field-meta.xml
<CustomField>
    <fullName>EmploymentHistoryName__c</fullName>
    <inlineHelpText>Please use this format while filling this field &quot;Company - Title(s)&quot; Example: Steelperlot - Manager</inlineHelpText>
    <label>Employment History Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>