force-app/main/default/objects/EmploymentHistory__c/fields/EmploymentName__c.field-meta.xml
<CustomField>
    <fullName>EmploymentName__c</fullName>
    <formula>IF( PositionsHeld__r.CurrentJob__c = TRUE, PositionsHeld__r.Name ,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employment Name</label>
    <type>Text</type>
</CustomField>