force-app/main/default/objects/EmploymentHistory__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <inlineHelpText>Date when the Employment ended at this Company. Select via Calendar</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>