force-app/main/default/objects/EmploymentHistory__c/fields/EndYear__c.field-meta.xml
<CustomField>
    <fullName>EndYear__c</fullName>
    <inlineHelpText>Year when the Employment ended at this Company. Enter in the format YYYY. Only select this if the whole date is not known.</inlineHelpText>
    <label>End Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>