force-app/main/default/objects/EmploymentHistory__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Location of the employee</description>
    <inlineHelpText>Location where this company is based.</inlineHelpText>
    <label>Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>