force-app/main/default/objects/EmploymentHistory__c/fields/NameOfTheCompany__c.field-meta.xml
<CustomField>
    <fullName>NameOfTheCompany__c</fullName>
    <description>Employee previous company name</description>
    <inlineHelpText>Name of the company where the contact has worked or currently working</inlineHelpText>
    <label>Name Of The Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>