force-app/main/default/objects/EmploymentHistory__c/fields/Position_Held_Name__c.field-meta.xml
<CustomField>
    <fullName>Position_Held_Name__c</fullName>
    <formula>IF( PositionsHeld__r.CurrentJob__c =TRUE,PositionsHeld__r.Name,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position Held Name</label>
    <type>Text</type>
</CustomField>