force-app/main/default/objects/EmploymentHistory__c/fields/PositionsHeld__c.field-meta.xml
<CustomField>
    <fullName>PositionsHeld__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Positions Held</label>
    <referenceTo>Positions_Held__c</referenceTo>
    <relationshipLabel>Employment History</relationshipLabel>
    <relationshipName>Employment_History</relationshipName>
    <type>Lookup</type>
</CustomField>