force-app/main/default/objects/EmploymentHistory__c/fields/PrimaryJob__c.field-meta.xml
<CustomField>
    <fullName>PrimaryJob__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Job</label>
    <type>Checkbox</type>
</CustomField>