force-app/main/default/objects/EmploymentHistory__c/fields/ReasonOfResignation__c.field-meta.xml
<CustomField>
    <fullName>ReasonOfResignation__c</fullName>
    <inlineHelpText>In a few words, mention the reason of Resignation.</inlineHelpText>
    <label>Reason Of Resignation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>