force-app/main/default/objects/EmploymentHistory__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <inlineHelpText>Date when the Employment started at this Company. Select via Calendar</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>