force-app/main/default/objects/EmploymentHistory__c/fields/StartYear__c.field-meta.xml
<CustomField>
    <fullName>StartYear__c</fullName>
    <inlineHelpText>Year when the Employment ended at this Company. Enter in the format YYYY. Only select if the full date is not known.</inlineHelpText>
    <label>Start Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>