force-app/main/default/objects/EmploymentHistory__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>From the list below, select one value that best represents the type of this Company.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public company</fullName>
            </value>
            <value>
                <fullName>Private company</fullName>
            </value>
            <value>
                <fullName>Philanthropy (if employed)</fullName>
            </value>
            <value>
                <fullName>Educational Institution</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>